--- a/starpark-front/src/app/app.component.html
+++ b/starpark-front/src/app/app.component.html
@@ -1,23 +1,26 @@
 <div class="container">
   <div class="row">
+    <div class="banner"></div>
+  </div>
+  <div class="row">
     <div class="login-box z-depth-2">
       <form>
-        <p class="h5 text-center mb-4">Sign in</p>
+        <p class="h5 text-center mb-4">Inicio de Sesión</p>
 
         <div class="md-form">
           <i class="fa fa-envelope prefix grey-text"></i>
           <input type="text" id="defaultForm-email" class="form-control" mdbActive>
-          <label for="defaultForm-email">Your email</label>
+          <label for="defaultForm-email">Correo electrónico</label>
         </div>
 
         <div class="md-form">
           <i class="fa fa-lock prefix grey-text"></i>
           <input type="password" id="defaultForm-pass" class="form-control" mdbActive>
-          <label for="defaultForm-pass">Your password</label>
+          <label for="defaultForm-pass">Clave</label>
         </div>
 
         <div class="text-center">
-          <button class="btn btn-default default-color-dark" mdbRippleRadius>Login</button>
+          <button class="btn btn-default default-color-dark" mdbRippleRadius>Validar</button>
         </div>
       </form>
     </div>
